--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@ h1 {
   position: sticky;
   top: 0;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
-  background-color:blueviolet
+  background-color:blueviolet;
 }
 
 .budgie {
